refactor: modularize controllers and add deployment-ready backend checks

--- a/backend/.env.example
+++ b/backend/.env.example
@@ -8,7 +8,7 @@ NODE_ENV=development
 FRONTEND_URL=http://localhost:5173
 
 # SMTP (mandatory)
-SMTP_HOST=smtp.mailtrap.io
+SMTP_HOST=smtp.gmail.com
 SMTP_PORT=587
 SMTP_SECURE=false
 SMTP_USER=your_smtp_username
