chore: remove shim controllers and refactor helper artifacts

--- a/backend/package.json
+++ b/backend/package.json
@@ -10,9 +10,7 @@
   },
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "node server.js",
-    "check:controller-size": "node scripts/check-controller-size.mjs --max 240",
-    "check:controllers": "npm run check:controller-size"
+    "start": "node server.js"
   },
   "engines": {
     "node": ">=22 <23"
