--- a/backend/.env.example
+++ b/backend/.env.example
@@ -7,7 +7,10 @@ ADMIN_PASSWORD=change_this_password
 NODE_ENV=development
 FRONTEND_URL=http://localhost:5173
 
-# SMTP (mandatory)
+# Email mode: smtp | disabled
+EMAIL_MODE=smtp
+
+# SMTP (required only when EMAIL_MODE=smtp)
 SMTP_HOST=smtp.gmail.com
 SMTP_PORT=587
 SMTP_SECURE=false
